third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul/unknown_container_attribute.rs
#[derive(derive_more::Mul)]
#[mul(unknown)]
struct Foo( i32);

#[derive(derive_more::Mul)]
#[mul(unknown)]
enum Enum {
    Bar { i: i32 },
}

fn main() {}
